# py-rag-redis-torch

./: CMakeLists.txt  README.md  setup.py
app/: bindings.cpp  load_data.py  main.py
